--- a/internal_templates/base.html
+++ b/internal_templates/base.html
@@ -232,6 +232,12 @@
           <span class="material-symbols-outlined text-[20px] group-hover:text-primary transition-colors">history</span>
           <span class="text-sm font-medium">İşlem Logları</span>
         </a>
+        <a href="/arsiv"
+          class="flex items-center gap-3 px-3 py-2.5 rounded-lg transition-colors group {% if current_path == '/arsiv' %}bg-primary text-white shadow-lg shadow-primary/20{% else %}text-slate-400 hover:text-white hover:bg-white/5{% endif %}">
+          <span
+            class="material-symbols-outlined text-[20px] group-hover:text-primary transition-colors">auto_delete</span>
+          <span class="text-sm font-medium">Geri Dönüşüm Kutusu</span>
+        </a>
         <a href="/ayarlar"
           class="flex items-center gap-3 px-3 py-2.5 rounded-lg transition-colors group {% if current_path == '/ayarlar' %}bg-primary text-white shadow-lg shadow-primary/20{% else %}text-slate-400 hover:text-white hover:bg-white/5{% endif %}">
           <span class="material-symbols-outlined text-[20px] group-hover:text-primary transition-colors">settings</span>
